--- a/index.html
+++ b/index.html
@@ -254,42 +254,42 @@
                 <ul class="clients-list list">
                     <li class="clients-list-item">
                         <a href="" class="clients-link" target="_blank" rel="noreferrer noopener nofollow">
-                            <svg class="clients-icon" width="106" heigt="60">
+                            <svg class="clients-icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-logo-client-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-list-item">
                         <a href="" class="clients-link" target="_blank" rel="noreferrer noopener nofollow">
-                            <svg class="clients-icon" width="106" heigt="60">
+                            <svg class="clients-icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-logo-client-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-list-item">
                         <a href="" class="clients-link" target="_blank" rel="noreferrer noopener nofollow">
-                            <svg class="clients-icon" width="106" heigt="60">
+                            <svg class="clients-icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-logo-client-3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-list-item">
                         <a href="" class="clients-link" target="_blank" rel="noreferrer noopener nofollow">
-                            <svg class="clients-icon" width="106" heigt="60">
+                            <svg class="clients-icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-logo-client-4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-list-item">
                         <a href="" class="clients-link" target="_blank" rel="noreferrer noopener nofollow">
-                            <svg class="clients-icon" width="106" heigt="60">
+                            <svg class="clients-icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-logo-client-5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="clients-list-item">
                         <a href="" class="clients-link" target="_blank" rel="noreferrer noopener nofollow">
-                            <svg class="clients-icon" width="106" heigt="60">
+                            <svg class="clients-icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-logo-client-6"></use>
                             </svg>
                         </a>
